kubernetes/beszel/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beszel
  labels:
    app: beszel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beszel
  template:
    metadata:
      labels:
        app: beszel
    spec:
      containers:
        - name: beszel
          image: henrygd/beszel:latest
          ports:
            - containerPort: 8090
              name: http
          volumeMounts:
            - name: beszel-data
              mountPath: "/beszel_data"
            - name: localtime
              mountPath: "/etc/localtime"
              readOnly: true
            - name: timezone
              mountPath: "/etc/timezone"
              readOnly: true
      volumes:
        - name: beszel-data
          persistentVolumeClaim:
            claimName: beszel-data-pvc
        - name: localtime
          hostPath:
            path: "/etc/localtime"
        - name: timezone
          hostPath:
            path: "/etc/timezone"
