kubernetes/beszel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel
  namespace: default
spec:
  ports:
    - port: 8090
      targetPort: 8090
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: beszel
  namespace: default
  labels:
    kubernetes.io/service-name: beszel
addressType: IPv4
ports:
  - port: 8090
endpoints:
  - addresses:
      - "100.95.104.11"
