kubernetes/beszel/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beszel-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd,default-admin-only-access@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: beszel.lambertlab.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: beszel
            port:
              number: 8090
  tls:
  - hosts:
    - beszel.lambertlab.us
    secretName: lambertlab-wildcard-tls
